feat: #323 Update OpenAPI definition + small refactoring
